Refactor trace apis
